# claudeocr

./: QUICK_REFERENCE.md  README.md  SPLIT_PATTERN_GUIDE.md  VALIDATION_GUIDE.md  config.py  example_template.csv  main.py  pyproject.toml  setup.ps1  setup.sh  setup_cli.py  test_validation.py
