[project]
name = "note-transcriber"
version = "0.1.0"
description = "AI-powered batch transcription of handwritten and printed sticky notes"
readme = "README.md"
authors = [{ name = "Note Transcriber" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
    "tqdm",
    "Pillow",
    "pandas",
    "rich",
]

[tool.uv]
dev-dependencies = []
